@@ -89,6 +89,7 @@ MINGW_AT_LANG([C])
 m4_include([headers.at])
 m4_include([ansiprintf.at])
 m4_include([logarithms.at])
+m4_include([powerfunc.at])
 
 # vim: filetype=config formatoptions=croql
 # $RCSfile$: end of file
